--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "./BaseLayout.astro";
 import Section from "../components/Section.astro";
 import { Image } from "astro:assets";
+import { ImageMetadata } from "astro";
 
 interface Props {
   prevNav: string;
