--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -8,13 +8,7 @@ interface Props {
   prevNav: string;
   title: string;
   description: string;
-  // Gotten this from the IntelliSense
-  coverImage: {
-    src: string;
-    width: number;
-    height: number;
-    format: "png" | "jpg" | "jpeg" | "tiff" | "webp" | "gif" | "svg" | "avif";
-  };
+  coverImage: ImageMetadata;
   coverImageAlt: string;
 }
 
@@ -34,7 +28,7 @@ const { prevNav, title, description, coverImage, coverImageAlt } = Astro.props;
       />
       <p>{description}</p>
     </Section>
-    <Section class="w-2/3 mx-auto">
+    <Section textContent class="w-2/3 mx-auto">
       <slot />
     </Section>
   </main>
