--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -28,7 +28,7 @@ const { prevNav, title, description, coverImage, coverImageAlt } = Astro.props;
       />
       <p>{description}</p>
     </Section>
-    <Section textContent class="w-2/3 mx-auto">
+    <Section articleContent class="w-2/3 mx-auto">
       <slot />
     </Section>
   </main>
