--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,7 @@ h1 {
 
 .h2,
 h2 {
-  @apply text-3xl font-light;
+  @apply text-2xl font-medium;
 }
 
 .h3,
@@ -34,5 +34,5 @@ p {
 
 .li,
 li {
-  @apply my-2 text-3xl font-light;
+  @apply list-disc ml-8;
 }
