--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,3 +36,13 @@ p {
 li {
   @apply list-disc ml-8;
 }
+
+/* This is for articles */
+/* TODO: Better identifier for images in articlse */
+p > img {
+  @apply rounded-md w-full sm:w-3/4 sm:mx-auto;
+}
+
+.astro-code {
+  @apply p-2 rounded-md w-full sm:w-3/4 sm:mx-auto;
+}
