made the article layout more mobile friendly

--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -29,7 +29,7 @@ const { prevNav, title, description, coverImage, coverImageAlt } = Astro.props;
       />
       <p>{description}</p>
     </Section>
-    <Section articleContent class="w-2/3 mx-auto">
+    <Section articleContent class="sm:w-2/3 sm:mx-auto">
       <slot />
     </Section>
   </main>
