--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
 @tailwind components;
 
 body {
-  @apply bg-indigo-500 bg-gradient-to-b from-indigo-500 via-purple-400 to-fuchsia-300;
+  @apply bg-indigo-500 bg-gradient-to-b from-indigo-500 via-purple-400 to-indigo-500;
   @apply text-indigo-50;
 }
 
