--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -18,7 +18,7 @@ const { prevNav, title, description, coverImage, coverImageAlt } = Astro.props;
 
 <BaseLayout prevNav={prevNav} title={title} description={description}>
   <main class="min-h-screen mx-auto">
-    <Section textContent class="w-1/2 mx-auto">
+    <Section textContent class="sm:w-1/2 sm:mx-auto">
       <h1>{title}</h1>
       <Image
         class="rounded-md"
