make the article links sort in an alphabetical order

--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -11,7 +11,9 @@ import ProjectShowcase from "../../../components/ProjectShowcase.astro";
 const experiences = await getCollection("experiences");
 const projects = await getCollection("gameArticles");
 
-const gameExp = experiences.find((e) => e.id === "game")?.data;
+const gameExp = experiences
+  .find((e) => e.id === "game")
+  ?.data.sort((a, b) => a.title.localeCompare(b.title));
 ---
 
 <Layout
