--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -3,6 +3,7 @@ import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
 
 import BaseLayout from "./BaseLayout.astro";
+import FormattedDate from "../components/FormattedDate.astro";
 import Section from "../components/Section.astro";
 
 interface Props {
@@ -11,25 +12,66 @@ interface Props {
   description: string;
   coverImage: ImageMetadata;
   coverImageAlt: string;
+  summaryPoints: string[];
+  dateProjectPublished: Date;
+  dateUpdated?: Date;
 }
 
-const { prevNav, title, description, coverImage, coverImageAlt } = Astro.props;
+const {
+  prevNav,
+  title,
+  description,
+  coverImage,
+  coverImageAlt,
+  summaryPoints,
+  dateProjectPublished,
+  dateUpdated,
+} = Astro.props;
 ---
 
 <BaseLayout prevNav={prevNav} title={title} description={description}>
-  <main class="min-h-screen mx-auto">
-    <Section textContent class="sm:w-1/2 sm:mx-auto">
-      <h1>{title}</h1>
-      <Image
-        class="rounded-md"
-        src={coverImage}
-        alt={coverImageAlt}
-        width="1280"
-        height="720"
-      />
-      <p>{description}</p>
-    </Section>
-    <Section articleContent class="sm:w-2/3 sm:mx-auto">
+  <main class="min-h-screen sm:w-2/3 sm:mx-auto">
+    <div
+      class="flex flex-col sm:flex-row justify-center items-center gap-8 m-8"
+    >
+      <Section noMargin textContent class="flex-grow">
+        <h1>{title}</h1>
+        <Image
+          class="rounded-md"
+          src={coverImage}
+          alt={coverImageAlt}
+          width="1280"
+          height="720"
+        />
+        <div class="text-sm">
+          <span>
+            Published: <FormattedDate date={dateProjectPublished} />
+          </span> -
+          {
+            dateUpdated && (
+              <span>
+                Updated: <FormattedDate date={dateUpdated} />
+              </span>
+            )
+          }
+        </div>
+
+        <p>{description}</p>
+      </Section>
+      {
+        summaryPoints && (
+          <Section noMargin textContent class="sm:h-fit">
+            <h2>Summary Points</h2>
+            <ul class="text-start">
+              {summaryPoints.map((p) => (
+                <li>{p}</li>
+              ))}
+            </ul>
+          </Section>
+        )
+      }
+    </div>
+    <Section articleContent>
       <slot />
     </Section>
   </main>
