--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -55,6 +55,7 @@ const gameProject = projects.sort(
             coverImage={p.data.coverImage}
             coverImageAlt={p.data.coverImageAlt}
             href={`game/${p.id}`}
+            dateProjectPublished={p.data.dateProjectPublished}
             itchioLink={p.data.itchio}
             steamLink={p.data.steam}
             githubLink={p.data.github}
