--- a/src/pages/comp-experience/web/index.astro
+++ b/src/pages/comp-experience/web/index.astro
@@ -17,9 +17,6 @@ const experiencesBackend = experiences.find(
   title="Web"
   description="Matthew Ubalde web development portfolio. Have ome experienced in React, React Native, and Vue. Used Gatsby, and now Astro, to develop websites."
 >
-  <Section textContent class="sm:mx-auto sm:w-1/3">
-    <p>Currently looking for an intern position as Front-end Developer!</p>
-  </Section>
   <Section textContent class="sm:mx-auto sm:w-2/3">
     <h1>Experience Summary</h1>
     <p>
@@ -56,7 +53,24 @@ const experiencesBackend = experiences.find(
       <b>AWS</b> with their <b>EC2</b> service.
     </p>
   </Section>
-  <div class="flex flex-col sm:flex-row gap-8 m-8">
+  <Section textContent>
+    <h1 class="text-center">What's this Website's Framework?</h1>
+    <p>
+      This website made with <b>Astro</b>, <b>Vue.js</b>, and <b>Tailwind</b>.
+      Currently hosted in <b>Github</b>.
+    </p>
+    <p>
+      Originally, my portfolio was purely made in <b>React</b> and <b
+        >Tailwind</b
+      >. However, I wanted to try another framework that I haven't tried yet
+      that might be better for my own use case.
+    </p>
+    <p>
+      I've tried with Gatsby with React for content collections, but found a
+      simplier and better approach with Astro.
+    </p>
+  </Section>
+  <!-- <div class="flex flex-col sm:flex-row gap-8 m-8">
     <Section noMargin textContent class="sm:w-1/2">
       <h1 class="text-center">What's this Website's Framework</h1>
       <p>
@@ -93,5 +107,5 @@ const experiencesBackend = experiences.find(
         </div>
       </div>
     </Section>
-  </div>
+  </div> -->
 </Layout>
