fix navigation links not working in game exp

--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -54,7 +54,7 @@ const gameProject = projects.sort(
             description={p.data.description}
             coverImage={p.data.coverImage}
             coverImageAlt={p.data.coverImageAlt}
-            href={`game/${p.id}`}
+            href={`/personal-portfolio-astro/comp-experience/game/${p.id}`}
             dateProjectPublished={p.data.dateProjectPublished}
             itchioLink={p.data.itchio}
             steamLink={p.data.steam}
