--- a/src/pages/comp-experience/game/[id].astro
+++ b/src/pages/comp-experience/game/[id].astro
@@ -15,6 +15,9 @@ const { article } = Astro.props;
 const { Content } = await render(article);
 ---
 
-<ArticleLayout prevNav="/comp-experience/game" {...article.data}>
+<ArticleLayout
+  prevNav="/personal-portfolio-astro/comp-experience/game"
+  {...article.data}
+>
   <Content />
 </ArticleLayout>
