--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -25,8 +25,8 @@ const {
   class:list={[
     className,
     "bg-cyan-900 bg-opacity-50",
-    !noPadding && "px-8 py-4",
-    !noMargin && "m-8",
+    !noPadding && "p-4 sm:px-8 py-4",
+    !noMargin && "m-4 sm:m-8",
     !noRounded && "rounded-md",
     textContent && " space-y-2 text-center content-center",
     articleContent && "space-y-2 text-start content-center",
