--- a/src/pages/comp-experience/software/index.astro
+++ b/src/pages/comp-experience/software/index.astro
@@ -1,9 +1,10 @@
 ---
+import { getCollection } from "astro:content";
+
 import Layout from "../../../layouts/PageLayout.astro";
 import Section from "../../../components/Section.astro";
-
-import BadgeContainer from "../../../components/BadgeContainer.astro";
-import { getCollection } from "astro:content";
+import BadgeDisplay from "../../../components/BadgeDisplay.astro";
+import SectionContainer from "../../../components/SectionContainer.astro";
 
 const experiences = await getCollection("experiences");
 const softwareExp = experiences.find((e) => e.id === "software")?.data;
@@ -11,9 +12,9 @@ const softwareExp = experiences.find((e) => e.id === "software")?.data;
 
 <Layout
   title="Software"
-  description="Matthew Ubalde software development portfolio. Have experience in C/C++, C#, and Java to create computer softwares."
+  description="Have experience in C/C++, C#, and Java to create computer software"
 >
-  <div class="flex flex-col sm:flex-row items-center gap-8 m-8">
+  <SectionContainer row class="items-center">
     <Section noMargin textContent class="sm:w-2/3">
       <h1>Experience Summary</h1>
       <p>
@@ -31,11 +32,18 @@ const softwareExp = experiences.find((e) => e.id === "software")?.data;
         particle system.
       </p>
     </Section>
-    <Section noMargin textContent class="flex-grow">
-      <h1>Software Experiences</h1>
-      {softwareExp && <BadgeContainer src={softwareExp} />}
-    </Section>
-  </div>
+    {
+      softwareExp && (
+        <BadgeDisplay
+          noMargin
+          class="flex grow"
+          title="Software Experiences"
+          src={softwareExp}
+        />
+      )
+    }
+  </SectionContainer>
+
   <!-- <Section textContent>
     <h1>Experiences in Fanshawe</h1>
     <p>Throughout my CPA3 program, I've learned many things.</p>
