--- a/src/components/ExperienceBadge.astro
+++ b/src/components/ExperienceBadge.astro
@@ -11,20 +11,20 @@ if (!icons[src]) throw new Error(`"${src} does not exist in glob", ${icons}`);
 ---
 
 <div
-  class="group flex flex-col justify-around items-center bg-cyan-900 min-w-32 min-h-32 p-4 rounded-md
+  class="group flex flex-col justify-around items-center min-w-24 max-w-36 bg-cyan-900 p-4 rounded-md
           hover:scale-110 transition-transform"
 >
   <Image
-    class="flex-grow max-h-24 max-w-24"
+    class="flex-grow min-h-12 max-h-24 min-w-12 max-w-24"
     src={icons[src]()}
     alt={alt}
-    width={100}
-    height={100}
+    width={128}
+    height={128}
     decoding="async"
-    loading="eager"
+    loading="lazy"
   />
   <div>
-    <h2 class="text-center text-xl">{title}</h2>
+    <h2 class="text-center text-xl break-words">{title}</h2>
     <div class="w-fit px-1 mx-auto text-center text-sm bg-cyan-950 rounded-md">
       {experience}
     </div>
