--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,6 +4,7 @@ import { getCollection } from "astro:content";
 import ImageLink from "../components/ImageLink.astro";
 import { SITE_NAVIGATION } from "../const";
 import { icons } from "../assets/globs";
+import ContentContainer from "./ContentContainer.astro";
 
 const socialMedia = await getCollection("socialMedia");
 const socialMediaData = socialMedia.map((s) => s.data);
@@ -15,18 +16,20 @@ socialMediaData.forEach((s) => {
 ---
 
 <footer
-  class="flex flex-col-reverse sm:flex-row justify-between p-4 m-4 bg-cyan-900 rounded-md"
+  class="flex flex-col-reverse sm:flex-row justify-between gap-2 p-2 m-1 sm:m-4 bg-cyan-900 rounded-md"
 >
   <!-- Site Map -->
-  <div>
-    <div class="text-center sm:text-start text-cyan-600 p-1">Site Map</div>
-    <div class="flex flex-row gap-1 justify-start items-start flex-wrap">
+  <ContentContainer class="flex-grow h-fit">
+    <Fragment slot="header"> Site Map </Fragment>
+    <div
+      class="flex flex-col gap-1 justify-center sm:justify-start items-start flex-wrap m-1"
+    >
       {
         SITE_NAVIGATION.map((nav) => (
-          <div class="flex flex-col justify-center items-start gap-1 flex-wrap  p-1 rounded-md border-4 border-cyan-950">
+          <div class="flex flex-col justify-center items-start gap-1 flex-wrap p-2 bg-cyan-950 rounded-md ">
             <a href={nav.href}>{nav.label}</a>
             {nav.children && (
-              <div class="flex flex-row gap-2 text-cyan-100">
+              <div class="flex flex-row gap-2 flex-wrap text-cyan-100">
                 {nav.children.map((cnav) => (
                   <a href={`${nav.href}${cnav.href}`} class="text-sm">
                     {cnav.label}
@@ -38,14 +41,18 @@ socialMediaData.forEach((s) => {
         ))
       }
     </div>
-  </div>
+  </ContentContainer>
   <!-- Credits and social media -->
-  <div class="flex flex-col justify-center items-center m-2">
-    <div class="text-sm text-center">Matthew Ubalde</div>
-    <div class="flex gap-2 p-1 bg-cyan-950 rounded-md">
+  <ContentContainer class="h-fit">
+    <Fragment slot="header">
+      Matthew Ubalde
+      <div class="text-sm">Social Media</div>
+    </Fragment>
+    <div class="flex justify-center items-center gap-2 m-1">
       {
         socialMediaData.map((s) => (
           <ImageLink
+            class="bg-cyan-950 p-1 rounded-md"
             src={icons[s.imagePath]()}
             href={s.href}
             alt={s.alt}
@@ -55,5 +62,5 @@ socialMediaData.forEach((s) => {
         ))
       }
     </div>
-  </div>
+  </ContentContainer>
 </footer>
