--- a/src/components/ProjectContainer.astro
+++ b/src/components/ProjectContainer.astro
@@ -1,5 +1,5 @@
 <div
-  class="flex flex-col justify-center items-center gap-8 w-3/4 sm:w-2/3 mx-auto"
+  class="flex flex-col justify-center items-center gap-4 sm:gap-8 lg:w-3/4 lg:mx-auto m-4"
 >
   <slot />
 </div>
