--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,10 +19,7 @@ const { title, description, prevNav } = Astro.props;
 <!doctype html>
 <html lang="en">
   <head>
-    <BaseHead
-      title={"Matthew Ubalde Portfolio | " + title}
-      description={description}
-    />
+    <BaseHead title={"Matthew Ubalde | " + title} description={description} />
   </head>
   <body>
     <!-- Empty div just to pad the top -->
