--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -3,10 +3,11 @@ import { getCollection } from "astro:content";
 
 import Layout from "../../../layouts/PageLayout.astro";
 import Section from "../../../components/Section.astro";
-import BadgeContainer from "../../../components/BadgeContainer.astro";
+import BadgeDisplay from "../../../components/BadgeDisplay.astro";
 
 import ProjectContainer from "../../../components/ProjectContainer.astro";
 import ProjectShowcase from "../../../components/ProjectShowcase.astro";
+import SectionContainer from "../../../components/SectionContainer.astro";
 
 const experiences = await getCollection("experiences");
 const projects = await getCollection("gameArticles");
@@ -21,9 +22,9 @@ const gameProject = projects.sort(
 
 <Layout
   title="Game"
-  description="Matthew Ubalde game development portfolio. Have experience in Godot and Unity to create well designed games."
+  description="Have experience in Godot and Unity to create well designed games"
 >
-  <div class="flex flex-col sm:flex-row justify-between gap-8 m-8">
+  <SectionContainer row class="justify-between">
     <Section noMargin textContent class="sm:w-1/3">
       <h1>Experience Summary</h1>
       <p>
@@ -32,11 +33,17 @@ const gameProject = projects.sort(
         to break into this industry when given the opportunity.
       </p>
     </Section>
-    <Section noMargin textContent class="flex-grow">
-      <h1>Game Experiences</h1>
-      {gameExp && <BadgeContainer src={gameExp} />}
-    </Section>
-  </div>
+    {
+      gameExp && (
+        <BadgeDisplay
+          noMargin
+          class="flex-grow"
+          title="Game Experiences"
+          src={gameExp}
+        />
+      )
+    }
+  </SectionContainer>
   <Section textContent class="sm:w-1/2 sm:mx-auto">
     <h1>Games for Fun</h1>
     <p>
