--- a/src/pages/comp-experience/mobile/index.astro
+++ b/src/pages/comp-experience/mobile/index.astro
@@ -1,22 +1,20 @@
 ---
+import { getCollection } from "astro:content";
+
 import Layout from "../../../layouts/PageLayout.astro";
 import Section from "../../../components/Section.astro";
-import BadgeContainer from "../../../components/BadgeContainer.astro";
-
-import { getCollection } from "astro:content";
-import ProjectContainer from "../../../components/ProjectContainer.astro";
+import BadgeDisplay from "../../../components/BadgeDisplay.astro";
+import SectionContainer from "../../../components/SectionContainer.astro";
 
 const experiences = await getCollection("experiences");
-const projects = await getCollection("projects");
 const mobileExp = experiences.find((e) => e.id === "mobile")?.data;
-const mobileProj = projects.find((e) => e.id === "mobile")?.data;
 ---
 
 <Layout
   title="Mobile"
-  description="Matthew Ubalde mobile development portfolio. Have experience in Android Studio and React Native to create Android apps."
+  description="Have experience in Android Studio and React Native to create Android apps"
 >
-  <div class="flex flex-col sm:flex-row justify-between gap-8 m-8">
+  <SectionContainer row class="justify-center">
     <Section noMargin textContent class="sm:w-1/3">
       <h1>Experience Summary</h1>
       <p>
@@ -25,11 +23,17 @@ const mobileProj = projects.find((e) => e.id === "mobile")?.data;
         were transferable in React Native.
       </p>
     </Section>
-    <Section noMargin class="flex-grow">
-      <h1 class="text-center">Mobile Experiences</h1>
-      {mobileExp && <BadgeContainer src={mobileExp} />}
-    </Section>
-  </div>
+    {
+      mobileExp && (
+        <BadgeDisplay
+          noMargin
+          class="flex-grow"
+          title="Mobile Experiences"
+          src={mobileExp}
+        />
+      )
+    }
+  </SectionContainer>
   <!-- <div>
     <Section textContent class="w-1/2 mx-auto">
       <h1>React Native Projects</h1>
