--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,7 @@
 body {
   @apply bg-indigo-500 bg-gradient-to-b from-indigo-500 via-purple-400 to-indigo-500;
   @apply text-cyan-50;
+  @apply overflow-x-hidden;
 }
 
 .h1,
