Move the BaseHead to the component folder

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
 import Footer from "../components/Footer.astro";
-import BaseHead from "../components/Metadata/BaseHead.astro";
+import BaseHead from "../components/BaseHead.astro";
 
 import Navbar from "../components/Navbar/Navbar.vue";
 
