--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,13 +1,12 @@
 ---
-import "../../styles/global.css";
+import "../../global.css";
 
 interface Props {
   title: string;
   description: string;
 }
 
-// const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const { title, description } = Astro.props;
 ---
 
@@ -19,9 +18,7 @@ const { title, description } = Astro.props;
   href="/personal-portfolio-astro/favicon.svg"
 />
 <meta name="generator" content={Astro.generator} />
-
-<!-- <link rel="canonical" href={canonicalURL} /> -->
-
+<link rel="canonical" href={canonicalURL} />
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
