--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -5,9 +5,9 @@ import Layout from "../../../layouts/PageLayout.astro";
 import Section from "../../../components/Section.astro";
 import BadgeDisplay from "../../../components/BadgeDisplay.astro";
 
-import ProjectContainer from "../../../components/ProjectContainer.astro";
+import ContainerProject from "../../../components/ContainerProject.astro";
 import ProjectShowcase from "../../../components/ProjectShowcase.astro";
-import SectionContainer from "../../../components/SectionContainer.astro";
+import ContainerSection from "../../../components/ContainerSection.astro";
 
 const experiences = await getCollection("experiences");
 const projects = await getCollection("gameArticles");
@@ -24,7 +24,7 @@ const gameProject = projects.sort(
   title="Game"
   description="Have experience in Godot and Unity to create well designed games"
 >
-  <SectionContainer row class="justify-between">
+  <ContainerSection row class="justify-between">
     <Section noMargin textContent class="sm:w-1/3">
       <h1>Experience Summary</h1>
       <p>
@@ -43,7 +43,7 @@ const gameProject = projects.sort(
         />
       )
     }
-  </SectionContainer>
+  </ContainerSection>
   <Section textContent class="sm:w-1/2 sm:mx-auto">
     <h1>Games for Fun</h1>
     <p>
@@ -52,7 +52,7 @@ const gameProject = projects.sort(
       but tried to make it deep and rewarding at the same time.
     </p>
   </Section>
-  <ProjectContainer>
+  <ContainerProject>
     {
       gameProject &&
         gameProject.map((p) => (
@@ -69,7 +69,7 @@ const gameProject = projects.sort(
           />
         ))
     }
-  </ProjectContainer>
+  </ContainerProject>
   <!-- <Fragment slot="projectAbout">
     <h1>Games for Fun</h1>
     <p>
@@ -79,6 +79,6 @@ const gameProject = projects.sort(
     </p>
   </Fragment>
   <Fragment slot="projects">
-    {gameProj && <ProjectContainer src={gameProj} />}
+    {gameProj && <ContainerProject src={gameProj} />}
   </Fragment> -->
 </Layout>
