--- a/src/pages/comp-experience/software/index.astro
+++ b/src/pages/comp-experience/software/index.astro
@@ -4,7 +4,7 @@ import { getCollection } from "astro:content";
 import Layout from "../../../layouts/PageLayout.astro";
 import Section from "../../../components/Section.astro";
 import BadgeDisplay from "../../../components/BadgeDisplay.astro";
-import SectionContainer from "../../../components/SectionContainer.astro";
+import ContainerSection from "../../../components/ContainerSection.astro";
 
 const experiences = await getCollection("experiences");
 const softwareExp = experiences.find((e) => e.id === "software")?.data;
@@ -14,7 +14,7 @@ const softwareExp = experiences.find((e) => e.id === "software")?.data;
   title="Software"
   description="Have experience in C/C++, C#, and Java to create computer software"
 >
-  <SectionContainer row class="items-center">
+  <ContainerSection row class="items-center">
     <Section noMargin textContent class="sm:w-2/3">
       <h1>Experience Summary</h1>
       <p>
@@ -42,7 +42,7 @@ const softwareExp = experiences.find((e) => e.id === "software")?.data;
         />
       )
     }
-  </SectionContainer>
+  </ContainerSection>
 
   <!-- <Section textContent>
     <h1>Experiences in Fanshawe</h1>
