--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import { getCollection } from "astro:content";
 import ImageLink from "../components/ImageLink.astro";
 import { SITE_NAVIGATION } from "../const";
 import { icons } from "../assets/globs";
-import ContentContainer from "./ContentContainer.astro";
+import ContainerContent from "./ContainerContent.astro";
 
 const socialMedia = await getCollection("socialMedia");
 const socialMediaData = socialMedia.map((s) => s.data);
@@ -19,7 +19,7 @@ socialMediaData.forEach((s) => {
   class="flex flex-col-reverse sm:flex-row justify-between gap-2 p-2 m-1 sm:m-4 bg-cyan-900 rounded-md"
 >
   <!-- Site Map -->
-  <ContentContainer class="flex-grow h-fit">
+  <ContainerContent class="flex-grow h-fit">
     <Fragment slot="header"> Site Map </Fragment>
     <div
       class="flex flex-col gap-1 justify-center sm:justify-start items-start flex-wrap m-1"
@@ -41,9 +41,9 @@ socialMediaData.forEach((s) => {
         ))
       }
     </div>
-  </ContentContainer>
+  </ContainerContent>
   <!-- Credits and social media -->
-  <ContentContainer class="h-fit">
+  <ContainerContent class="h-fit">
     <Fragment slot="header">
       Matthew Ubalde
       <div class="text-sm">Social Media</div>
@@ -62,5 +62,5 @@ socialMediaData.forEach((s) => {
         ))
       }
     </div>
-  </ContentContainer>
+  </ContainerContent>
 </footer>
