--- a/src/components/ImageLink.astro
+++ b/src/components/ImageLink.astro
@@ -1,15 +1,13 @@
 ---
-import type { ImageMetadata } from "astro";
 import type { HTMLAttributes } from "astro/types";
 import type { ImageLinkType } from "../types";
 
 import { Image } from "astro:assets";
 
-type Props = HTMLAttributes<"a"> &
-  ImageLinkType & {
-    width?: number;
-    height?: number;
-  };
+interface Props extends HTMLAttributes<"a">, ImageLinkType {
+  width?: number;
+  height?: number;
+}
 
 const {
   src,
