--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,7 @@
 import Footer from "../components/Footer.astro";
 import BaseHead from "../components/BaseHead.astro";
 
-import Navbar from "../components/Navbar/Navbar.vue";
+import Navbar from "../components/Navbar/Navbar.astro";
 
 const pathname = Astro.url.pathname;
 const currentPath = pathname;
@@ -21,22 +21,13 @@ const { title, description, prevNav } = Astro.props;
   <head>
     <BaseHead title={"Matthew Ubalde | " + title} description={description} />
   </head>
-  <body>
-    <!-- Empty div just to pad the top -->
-    <div class="mt-24 sm:mt-36"></div>
-    <Navbar prev={prevNav} current={currentPath} client:only="vue">
-      <div
-        slot="fallback"
-        class="fixed z-40 top-1 inset-x-1 sm:top-4 sm:inset-x-4 p-1 sm:p-4 bg-cyan-900 rounded-md"
-      >
-        <div class="flex-grow bg-cyan-950 p-3 sm:p-2 rounded-md text-start">
-          Loading...
-        </div>
-      </div>
-    </Navbar>
-    <!-- Other layouts should have inserted their main element -->
-    <slot />
-    <!-- end main element -->
+  <body class="h-screen">
+    <div class="grid grid-cols-4 gap-8 p-8">
+      <Navbar prev={prevNav} current={currentPath} class="col-span-1" />
+      <main class="col-span-3">
+        <slot />
+      </main>
+    </div>
     <Footer />
   </body>
 </html>
