Clean up footer area

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,7 @@ socialMediaData.forEach((s) => {
 ---
 
 <footer
-  class="flex flex-col-reverse sm:flex-row justify-between gap-2 p-2 m-1 sm:m-4 bg-cyan-900 rounded-md"
+  class="flex flex-col-reverse sm:flex-row justify-between gap-2 m-1 sm:m-4"
 >
   <!-- Site Map -->
   <ContainerContent class="flex-grow h-fit">
