--- a/src/components/ContainerContent.astro
+++ b/src/components/ContainerContent.astro
@@ -9,7 +9,7 @@ const { class: className } = Astro.props;
 <div
   class:list={[
     className,
-    "rounded-md overflow-hidden border-4 border-cyan-950",
+    "rounded-md overflow-hidden border-4 border-cyan-950 bg-cyan-900 bg-opacity-75",
   ]}
 >
   <div class="bg-cyan-950 p-1 break-words">
